Name:            lambdasim
Version:         0.1
Synopsis:        Lambdaλsim: Simple Vessel Simulator 

Description:
  Simulates sensor output for a vessel for testing navigation software.

License:         BSD3
License-file:    LICENSE
Author:          Jacob Stanley
Maintainer:      jystic@jystic.com
Stability:       Experimental
Category:        Web
Build-type:      Simple
Cabal-version:   >= 1.6

Flag deps
  default: False
  description: Use 'cabal install -fdeps' to install lambdasim's dependencies.

Executable lambdasim
  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
    base == 4.*,
    bytestring,
    bytestring-lexing == 0.2.*,
    filepath,
    haskell98,
    json,
    MonadCatchIO-transformers == 0.2.*,
    monads-fd == 0.1.*,
    snap-core == 0.2.*,
    snap-server == 0.2.*,
    text == 0.7.*,
    xhtml-combinators == 0.2.*

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded -fno-warn-unused-imports

  if flag(deps)
    buildable: False
