Name:            lambdasim
Version:         0.1
Synopsis:        Lambdaλsim: Simple Vessel Simulator 

Description:
  Simulates sensor output for a vessel for testing navigation software.

License:         BSD3
License-file:    LICENSE
Author:          Jacob Stanley
Maintainer:      jacob@stanley.io
Stability:       Experimental
Category:        Web
Build-type:      Simple
Cabal-version:   >= 1.6

Flag deps
  default: False
  description: Use 'cabal install -fdeps' to install lambdasim's dependencies.

Executable lambdasim
  main-is: Main.hs
  hs-source-dirs: src
  include-dirs: cbits
  c-sources: cbits/network.c
  other-modules: Network.Interfaces

  if os(windows)
    cpp-options: -DWINDOWS
    build-depends: Win32 == 2.2.*

  build-depends:
    base == 4.*,
    bytestring,
    bytestring-lexing == 0.2.*,
    derive == 2.3.*,
    dimensional == 0.8.*,
    fclabels == 0.4.*,
    filepath,
    haskell98,
    json,
    MonadCatchIO-transformers == 0.2.*,
    monads-fd == 0.1.*,
    network == 2.2.*,
    parallel == 2.2.*,
    old-locale == 1.0.*,
    snap-core == 0.2.*,
    snap-server == 0.2.*,
    stm == 2.1.*,
    text == 0.7.*,
    time == 1.1.*,
    xhtml-combinators == 0.2.*

  ghc-options: -O2 -threaded -Wall -Werror -fwarn-tabs -funbox-strict-fields -fno-warn-unused-do-bind

  if flag(deps)
    buildable: False
